# vec2typst

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/vec2typst/: affine.py  cli.py
