[project]
name = "vec2typst"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
description = "Extract text from SVG figures into editable Typst overlays while preserving the original vector graphics."
authors = [
    { name = "Xun Yuan", email = "yuanxun2000@outlook.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
vec2typst = "vec2typst.cli:main"

[project.urls]
Homepage = "https://github.com/yuanxun-yx/vec2typst"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vec2typst"]